landing page version 2
including mid-section

--- a/index.html
+++ b/index.html
@@ -49,12 +49,22 @@
             Some random information.
           </div>
           <div class="mid-images-text">
-            <div class="mid-image"></div>
-            <div class="mid-text"></div>
-            <div class="mid-image"></div>
-            <div class="mid-text"></div>
-            <div class="mid-image"></div>
-            <div class="mid-text"></div>
+            <div class="image-container">
+              <div class="mid-image"></div>
+              <div class="mid-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="image-container">
+              <div class="mid-image"></div>
+              <div class="mid-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="image-container">
+              <div class="mid-image"></div>
+              <div class="mid-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="image-container">
+              <div class="mid-image"></div>
+              <div class="mid-text">this is some subtext under an illustration or image</div>
+            </div>
           </div>
         </div>
         <div class="quote-section">
