--- a/index.html
+++ b/index.html
@@ -68,13 +68,26 @@
           </div>
         </div>
         <div class="quote-section">
-
+          <div class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+          </div>
+          <div class="author">
+            -Thor, God of Thunder
+          </div>
         </div>
         <div class="action-section">
-
+          <div class="action-container">
+            <div class="action-call">
+              <p class="call">Call to action! It's time!</p>
+              <p class="sign">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="action-button">
+              Sign up
+            </button>
+          </div>
         </div>
         <div class="footer">
-            
+            Copyright The Odin Project 2021
         </div>
     </body>
 </html>
